--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script async src="../pagead2.googlesyndication.com/pagead/js/fcf12.txt?client=ca-pub-1055959514095353"
      crossorigin="anonymous"></script>
   <title>Games &#8211; Browse all games</title>
+	<meta name="description" content="Explore Yankees Games – your ultimate destination for thrilling online gaming. Discover exciting games, tips, and updates for gamers of all levels. Play, learn, and enjoy the gaming experience like never before!">
 <meta name='robots' content='max-image-preview:large' />
 <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
 <link rel="alternate" type="application/rss+xml" title="Games &raquo; Feed" href="feed/index.html" />
