--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<meta name="google-site-verification" content="M0bt9AgZUWZc3XswIx98Ia18kzE-7la3ubAxmp1L-mQ" />
 <script async src="../pagead2.googlesyndication.com/pagead/js/fcf12.txt?client=ca-pub-1055959514095353"
      crossorigin="anonymous"></script>
   <title>Games &#8211; Browse all games</title>
