--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 
 
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RDDXJS8XQC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RDDXJS8XQC');
+</script>
+	
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="google-site-verification" content="M0bt9AgZUWZc3XswIx98Ia18kzE-7la3ubAxmp1L-mQ" />
