--- a/about-us/index.html
+++ b/about-us/index.html
@@ -23,6 +23,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 /* ]]> */
 </script>
 <style id='wp-emoji-styles-inline-css' type='text/css'>
+google-site-verification=6aUaf8NmPb4LMpgAbN92qQ332UUw3GLe3MitFPmAJYc
 
 	img.wp-smiley, img.emoji {
 		display: inline !important;
